include/codata_constants_2018.h

ADD_IMPORT extern const double KELVIN_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_KELVIN_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double KELVIN_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_KELVIN_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double KELVIN_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double U_KELVIN_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double KELVIN_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double U_KELVIN_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double KILOGRAM_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double U_KILOGRAM_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double KILOGRAM_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_KILOGRAM_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double KILOGRAM_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_KILOGRAM_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double KILOGRAM_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double U_KILOGRAM_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double KILOGRAM_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double U_KILOGRAM_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double LATTICE_PARAMETER_OF_SILICON_2018;/**< m */
ADD_IMPORT extern const double U_LATTICE_PARAMETER_OF_SILICON_2018;/**< m */
ADD_IMPORT extern const double LATTICE_SPACING_OF_IDEAL_SI__220_2018;/**< m */
ADD_IMPORT extern const double U_LATTICE_SPACING_OF_IDEAL_SI__220_2018;/**< m */
ADD_IMPORT extern const double LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018;/**< m^-3 */
ADD_IMPORT extern const double U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018;/**< m^-3 */
ADD_IMPORT extern const double LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018;/**< m^-3 */
ADD_IMPORT extern const double U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018;/**< m^-3 */
ADD_IMPORT extern const double LUMINOUS_EFFICACY_2018;/**< lm W^-1 */
ADD_IMPORT extern const double U_LUMINOUS_EFFICACY_2018;/**< lm W^-1 */
ADD_IMPORT extern const double MAG__FLUX_QUANTUM_2018;/**< Wb */
ADD_IMPORT extern const double U_MAG__FLUX_QUANTUM_2018;/**< Wb */
ADD_IMPORT extern const double MOLAR_GAS_CONSTANT_2018;/**< J mol^-1 K^-1 */
ADD_IMPORT extern const double U_MOLAR_GAS_CONSTANT_2018;/**< J mol^-1 K^-1 */
ADD_IMPORT extern const double MOLAR_MASS_CONSTANT_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double U_MOLAR_MASS_CONSTANT_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double MOLAR_MASS_OF_CARBON_12_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double U_MOLAR_MASS_OF_CARBON_12_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double MOLAR_PLANCK_CONSTANT_2018;/**< J Hz^-1 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_PLANCK_CONSTANT_2018;/**< J Hz^-1 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_SILICON_2018;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_SILICON_2018;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLYBDENUM_X_UNIT_2018;/**< m */
ADD_IMPORT extern const double U_MOLYBDENUM_X_UNIT_2018;/**< m */
ADD_IMPORT extern const double MUON_COMPTON_WAVELENGTH_2018;/**< m */
ADD_IMPORT extern const double U_MUON_COMPTON_WAVELENGTH_2018;/**< m */