src/codata_constants_2018.f90


real(c_double), protected, public, bind(C,name="KELVIN_HERTZ_RELATIONSHIP_2018"):: &
capi_177_2018=KELVIN_HERTZ_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KELVIN_HERTZ_RELATIONSHIP_2018") :: &
capi_U_177_2018=U_KELVIN_HERTZ_RELATIONSHIP_2018

real(real64), parameter, public :: KELVIN_INVERSE_METER_RELATIONSHIP_2018=69.50348004d0 !! m^-1
real(real64), parameter, public :: U_KELVIN_INVERSE_METER_RELATIONSHIP_2018=0.0d0 !! m^-1

real(c_double), protected, public, bind(C,name="KELVIN_INVERSE_METER_RELATIONSHIP_2018"):: &
capi_178_2018=KELVIN_INVERSE_METER_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KELVIN_INVERSE_METER_RELATIONSHIP_2018") :: &
capi_U_178_2018=U_KELVIN_INVERSE_METER_RELATIONSHIP_2018

real(real64), parameter, public :: KELVIN_JOULE_RELATIONSHIP_2018=1.380649d-23 !! J
real(real64), parameter, public :: U_KELVIN_JOULE_RELATIONSHIP_2018=0.0d0 !! J

real(c_double), protected, public, bind(C,name="KELVIN_JOULE_RELATIONSHIP_2018"):: &
capi_179_2018=KELVIN_JOULE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KELVIN_JOULE_RELATIONSHIP_2018") :: &
capi_U_179_2018=U_KELVIN_JOULE_RELATIONSHIP_2018

real(real64), parameter, public :: KELVIN_KILOGRAM_RELATIONSHIP_2018=1.536179187d-40 !! kg
real(real64), parameter, public :: U_KELVIN_KILOGRAM_RELATIONSHIP_2018=0.0d0 !! kg

real(c_double), protected, public, bind(C,name="KELVIN_KILOGRAM_RELATIONSHIP_2018"):: &
capi_180_2018=KELVIN_KILOGRAM_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KELVIN_KILOGRAM_RELATIONSHIP_2018") :: &
capi_U_180_2018=U_KELVIN_KILOGRAM_RELATIONSHIP_2018

real(real64), parameter, public :: KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=6.0221407621d26 !! u
real(real64), parameter, public :: U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=0.0000000018d26 !! u

real(c_double), protected, public, bind(C,name="KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018"):: &
capi_181_2018=KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018") :: &
capi_U_181_2018=U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP_2018

real(real64), parameter, public :: KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018=5.609588603d35 !! eV
real(real64), parameter, public :: U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018=0.0d0 !! eV

real(c_double), protected, public, bind(C,name="KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018"):: &
capi_182_2018=KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018") :: &
capi_U_182_2018=U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP_2018

real(real64), parameter, public :: KILOGRAM_HARTREE_RELATIONSHIP_2018=2.0614857887409d34 !! E_h
real(real64), parameter, public :: U_KILOGRAM_HARTREE_RELATIONSHIP_2018=0.0000000000040d34 !! E_h

real(c_double), protected, public, bind(C,name="KILOGRAM_HARTREE_RELATIONSHIP_2018"):: &
capi_183_2018=KILOGRAM_HARTREE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KILOGRAM_HARTREE_RELATIONSHIP_2018") :: &
capi_U_183_2018=U_KILOGRAM_HARTREE_RELATIONSHIP_2018

real(real64), parameter, public :: KILOGRAM_HERTZ_RELATIONSHIP_2018=1.356392489d50 !! Hz
real(real64), parameter, public :: U_KILOGRAM_HERTZ_RELATIONSHIP_2018=0.0d0 !! Hz

real(c_double), protected, public, bind(C,name="KILOGRAM_HERTZ_RELATIONSHIP_2018"):: &
capi_184_2018=KILOGRAM_HERTZ_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KILOGRAM_HERTZ_RELATIONSHIP_2018") :: &
capi_U_184_2018=U_KILOGRAM_HERTZ_RELATIONSHIP_2018

real(real64), parameter, public :: KILOGRAM_INVERSE_METER_RELATIONSHIP_2018=4.524438335d41 !! m^-1
real(real64), parameter, public :: U_KILOGRAM_INVERSE_METER_RELATIONSHIP_2018=0.0d0 !! m^-1

real(c_double), protected, public, bind(C,name="KILOGRAM_INVERSE_METER_RELATIONSHIP_2018"):: &
capi_185_2018=KILOGRAM_INVERSE_METER_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KILOGRAM_INVERSE_METER_RELATIONSHIP_2018") :: &
capi_U_185_2018=U_KILOGRAM_INVERSE_METER_RELATIONSHIP_2018

real(real64), parameter, public :: KILOGRAM_JOULE_RELATIONSHIP_2018=8.987551787d16 !! J
real(real64), parameter, public :: U_KILOGRAM_JOULE_RELATIONSHIP_2018=0.0d0 !! J

real(c_double), protected, public, bind(C,name="KILOGRAM_JOULE_RELATIONSHIP_2018"):: &
capi_186_2018=KILOGRAM_JOULE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KILOGRAM_JOULE_RELATIONSHIP_2018") :: &
capi_U_186_2018=U_KILOGRAM_JOULE_RELATIONSHIP_2018

real(real64), parameter, public :: KILOGRAM_KELVIN_RELATIONSHIP_2018=6.509657260d39 !! K
real(real64), parameter, public :: U_KILOGRAM_KELVIN_RELATIONSHIP_2018=0.0d0 !! K

real(c_double), protected, public, bind(C,name="KILOGRAM_KELVIN_RELATIONSHIP_2018"):: &
capi_187_2018=KILOGRAM_KELVIN_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KILOGRAM_KELVIN_RELATIONSHIP_2018") :: &
capi_U_187_2018=U_KILOGRAM_KELVIN_RELATIONSHIP_2018

real(real64), parameter, public :: LATTICE_PARAMETER_OF_SILICON_2018=5.431020511d-10 !! m
real(real64), parameter, public :: U_LATTICE_PARAMETER_OF_SILICON_2018=0.000000089d-10 !! m

real(c_double), protected, public, bind(C,name="LATTICE_PARAMETER_OF_SILICON_2018"):: &
capi_188_2018=LATTICE_PARAMETER_OF_SILICON_2018
real(c_double), protected, public, bind(C,name="U_LATTICE_PARAMETER_OF_SILICON_2018") :: &
capi_U_188_2018=U_LATTICE_PARAMETER_OF_SILICON_2018

real(real64), parameter, public :: LATTICE_SPACING_OF_IDEAL_SI__220_2018=1.920155716d-10 !! m
real(real64), parameter, public :: U_LATTICE_SPACING_OF_IDEAL_SI__220_2018=0.000000032d-10 !! m

real(c_double), protected, public, bind(C,name="LATTICE_SPACING_OF_IDEAL_SI__220_2018"):: &
capi_189_2018=LATTICE_SPACING_OF_IDEAL_SI__220_2018
real(c_double), protected, public, bind(C,name="U_LATTICE_SPACING_OF_IDEAL_SI__220_2018") :: &
capi_U_189_2018=U_LATTICE_SPACING_OF_IDEAL_SI__220_2018

real(real64), parameter, public :: LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018=2.651645804d25 !! m^-3
real(real64), parameter, public :: U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018=0.0d0 !! m^-3

real(c_double), protected, public, bind(C,name="LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018"):: &
capi_190_2018=LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018
real(c_double), protected, public, bind(C,name="U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018") :: &
capi_U_190_2018=U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA_2018

real(real64), parameter, public :: LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018=2.686780111d25 !! m^-3
real(real64), parameter, public :: U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018=0.0d0 !! m^-3

real(c_double), protected, public, bind(C,name="LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018"):: &
capi_191_2018=LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018
real(c_double), protected, public, bind(C,name="U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018") :: &
capi_U_191_2018=U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA_2018

real(real64), parameter, public :: LUMINOUS_EFFICACY_2018=683d0 !! lm W^-1
real(real64), parameter, public :: U_LUMINOUS_EFFICACY_2018=0.0d0 !! lm W^-1

real(c_double), protected, public, bind(C,name="LUMINOUS_EFFICACY_2018"):: &
capi_192_2018=LUMINOUS_EFFICACY_2018
real(c_double), protected, public, bind(C,name="U_LUMINOUS_EFFICACY_2018") :: &
capi_U_192_2018=U_LUMINOUS_EFFICACY_2018

real(real64), parameter, public :: MAG__FLUX_QUANTUM_2018=2.067833848d-15 !! Wb
real(real64), parameter, public :: U_MAG__FLUX_QUANTUM_2018=0.0d0 !! Wb

real(c_double), protected, public, bind(C,name="MAG__FLUX_QUANTUM_2018"):: &
capi_193_2018=MAG__FLUX_QUANTUM_2018
real(c_double), protected, public, bind(C,name="U_MAG__FLUX_QUANTUM_2018") :: &
capi_U_193_2018=U_MAG__FLUX_QUANTUM_2018

real(real64), parameter, public :: MOLAR_GAS_CONSTANT_2018=8.314462618d0 !! J mol^-1 K^-1
real(real64), parameter, public :: U_MOLAR_GAS_CONSTANT_2018=0.0d0 !! J mol^-1 K^-1

real(c_double), protected, public, bind(C,name="MOLAR_GAS_CONSTANT_2018"):: &
capi_194_2018=MOLAR_GAS_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_MOLAR_GAS_CONSTANT_2018") :: &
capi_U_194_2018=U_MOLAR_GAS_CONSTANT_2018

real(real64), parameter, public :: MOLAR_MASS_CONSTANT_2018=0.99999999965d-3 !! kg mol^-1
real(real64), parameter, public :: U_MOLAR_MASS_CONSTANT_2018=0.00000000030d-3 !! kg mol^-1

real(c_double), protected, public, bind(C,name="MOLAR_MASS_CONSTANT_2018"):: &
capi_195_2018=MOLAR_MASS_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_MOLAR_MASS_CONSTANT_2018") :: &
capi_U_195_2018=U_MOLAR_MASS_CONSTANT_2018

real(real64), parameter, public :: MOLAR_MASS_OF_CARBON_12_2018=11.9999999958d-3 !! kg mol^-1
real(real64), parameter, public :: U_MOLAR_MASS_OF_CARBON_12_2018=0.0000000036d-3 !! kg mol^-1

real(c_double), protected, public, bind(C,name="MOLAR_MASS_OF_CARBON_12_2018"):: &
capi_196_2018=MOLAR_MASS_OF_CARBON_12_2018
real(c_double), protected, public, bind(C,name="U_MOLAR_MASS_OF_CARBON_12_2018") :: &
capi_U_196_2018=U_MOLAR_MASS_OF_CARBON_12_2018

real(real64), parameter, public :: MOLAR_PLANCK_CONSTANT_2018=3.990312712d-10 !! J Hz^-1 mol^-1
real(real64), parameter, public :: U_MOLAR_PLANCK_CONSTANT_2018=0.0d0 !! J Hz^-1 mol^-1

real(c_double), protected, public, bind(C,name="MOLAR_PLANCK_CONSTANT_2018"):: &
capi_197_2018=MOLAR_PLANCK_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_MOLAR_PLANCK_CONSTANT_2018") :: &
capi_U_197_2018=U_MOLAR_PLANCK_CONSTANT_2018

real(real64), parameter, public :: MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018=22.71095464d-3 !! m^3 mol^-1
real(real64), parameter, public :: U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018=0.0d0 !! m^3 mol^-1

real(c_double), protected, public, bind(C,name="MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018"):: &
capi_198_2018=MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018
real(c_double), protected, public, bind(C,name="U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018") :: &
capi_U_198_2018=U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA_2018

real(real64), parameter, public :: MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018=22.41396954d-3 !! m^3 mol^-1
real(real64), parameter, public :: U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018=0.0d0 !! m^3 mol^-1

real(c_double), protected, public, bind(C,name="MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018"):: &
capi_199_2018=MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018
real(c_double), protected, public, bind(C,name="U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018") :: &
capi_U_199_2018=U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA_2018

real(real64), parameter, public :: MOLAR_VOLUME_OF_SILICON_2018=1.205883199d-5 !! m^3 mol^-1
real(real64), parameter, public :: U_MOLAR_VOLUME_OF_SILICON_2018=0.000000060d-5 !! m^3 mol^-1

real(c_double), protected, public, bind(C,name="MOLAR_VOLUME_OF_SILICON_2018"):: &
capi_200_2018=MOLAR_VOLUME_OF_SILICON_2018
real(c_double), protected, public, bind(C,name="U_MOLAR_VOLUME_OF_SILICON_2018") :: &
capi_U_200_2018=U_MOLAR_VOLUME_OF_SILICON_2018

real(real64), parameter, public :: MOLYBDENUM_X_UNIT_2018=1.00209952d-13 !! m
real(real64), parameter, public :: U_MOLYBDENUM_X_UNIT_2018=0.00000053d-13 !! m

real(c_double), protected, public, bind(C,name="MOLYBDENUM_X_UNIT_2018"):: &
capi_201_2018=MOLYBDENUM_X_UNIT_2018
real(c_double), protected, public, bind(C,name="U_MOLYBDENUM_X_UNIT_2018") :: &
capi_U_201_2018=U_MOLYBDENUM_X_UNIT_2018

real(real64), parameter, public :: MUON_COMPTON_WAVELENGTH_2018=1.173444110d-14 !! m
real(real64), parameter, public :: U_MUON_COMPTON_WAVELENGTH_2018=0.000000026d-14 !! m

real(c_double), protected, public, bind(C,name="MUON_COMPTON_WAVELENGTH_2018"):: &
capi_202_2018=MUON_COMPTON_WAVELENGTH_2018
real(c_double), protected, public, bind(C,name="U_MUON_COMPTON_WAVELENGTH_2018") :: &
capi_U_202_2018=U_MUON_COMPTON_WAVELENGTH_2018
